# rustwebdev

./: .gitignore  Cargo.toml  README.md  questions.json
migrations/: 20231027215900_questions_table.up.sql
src/: main.rs  profanity.rs  store.rs
src/errors/: mod.rs
src/routes/: answer.rs  authentication.rs  question.rs
src/types/: account.rs  answer.rs  pagination.rs  question.rs
