[package]
name = "rustwebdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
log = "0.4.20"
handle-errors = { path = "handle-errors" }
