[package]
name = "rustwebdev"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.2", features = ["full"] }
warp = "0.3"
uuid = {  version = "1.5.0", features = ["v4"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sqlx = { version = "0.7.2", features = [ "runtime-tokio-rustls", "migrate", "postgres" ]}
reqwest = { version = "0.11.22", features = ["json"] }
reqwest-middleware = "0.2.4"
reqwest-retry = "0.3.0"
rand = "0.8.5"
rust-argon2 = "2.0.0"
paseto = "2.0"
chrono = "0.4.31"